[[release-notes-5.13.3]]
== 5.13.3

*Date of Release:* ❓

*Scope:* Bug fixes and enhancements since 5.13.2

For a complete list of all _closed_ issues and pull requests for this release, consult the
link:{junit-framework-repo}+/milestone/100?closed=1+[5.13.3] milestone page in the JUnit
repository on GitHub.


[[release-notes-5.13.3-junit-platform]]
=== JUnit Platform

[[release-notes-5.13.3-junit-platform-bug-fixes]]
==== Bug Fixes

* ❓

[[release-notes-5.13.3-junit-platform-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-5.13.3-junit-platform-new-features-and-improvements]]
==== New Features and Improvements

* ❓


[[release-notes-5.13.3-junit-jupiter]]
=== JUnit Jupiter

[[release-notes-5.13.3-junit-jupiter-bug-fixes]]
==== Bug Fixes

* Stop reporting discovery issues for composed annotation classes that are meta-annotated
  with `@Nested`.
* Stop reporting discovery issues for `DefaultImpls` classes generated by the Kotlin
  compiler for interfaces with non-abstract test methods.

[[release-notes-5.13.3-junit-jupiter-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-5.13.3-junit-jupiter-new-features-and-improvements]]
==== New Features and Improvements

* ❓


[[release-notes-5.13.3-junit-vintage]]
=== JUnit Vintage

[[release-notes-5.13.3-junit-vintage-bug-fixes]]
==== Bug Fixes

* ❓

[[release-notes-5.13.3-junit-vintage-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-5.13.3-junit-vintage-new-features-and-improvements]]
==== New Features and Improvements

* ❓