@@ -39,6 +39,10 @@ repository on GitHub.
   with `@Nested`.
 * Stop reporting discovery issues for `DefaultImpls` classes generated by the Kotlin
   compiler for interfaces with non-abstract test methods.
+* When a `customReason` is supplied along with a `null` value for the default `reason` to
+  `ConditionEvaluationResult.disabled(String, String)`, the resulting reason is now
+  `"my&nbsp;custom&nbsp;reason"` instead of
+  `"null&nbsp;++==>++&nbsp;my&nbsp;custom&nbsp;reason"`.
 
 [[release-notes-5.13.3-junit-jupiter-deprecations-and-breaking-changes]]
 ==== Deprecations and Breaking Changes
@@ -48,7 +52,13 @@ repository on GitHub.
 [[release-notes-5.13.3-junit-jupiter-new-features-and-improvements]]
 ==== New Features and Improvements
 
-* ❓
+* A _blank_ reason supplied to a `ConditionEvaluationResult` factory method is now treated
+  the same as a `null` reason, resulting in an _empty_ `Optional` returned from
+  `ConditionEvaluationResult.getReason()`.
+* The Javadoc for factory methods in `ConditionEvaluationResult` now explicitly states
+  that both `null` and _blank_ values are supported for reason strings and that such
+  values will result in an _empty_ `Optional` returned from
+  `ConditionEvaluationResult.getReason()`.
 
 
 [[release-notes-5.13.3-junit-vintage]]
